--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,17 @@ out/
 
 # Ignores development broadcast logs
 !/broadcast
-*broadcast*
-
-
-# Docs
-docs/
+/broadcast/*/31337/
+/broadcast/**/dry-run/
 
 # Dotenv file
 .env
+
+# Node
+node_modules/
+
+# editor files
+.vscode/
+
+# compilers
+soljson*
